Fix content hidden by wrapper navbar

--- a/static/css/wrapper.css
+++ b/static/css/wrapper.css
@@ -28,6 +28,10 @@ footer {
   list-style-type: none;
 }
 
+main {
+  margin-top: 12rem;
+}
+
 /* Layout Template */
 nav {
   padding: 0.5rem 0;
